# mirror-manager

./: .gitignore  README.md  manage.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  tailwind.config.js  wsgi.py
src/: __init__.py  main.py  models.py
src/account/: auth.py  models.py  routes.py  token.py
src/auth/: routes.py
src/mirrors/: models.py  routes.py  utils.py
src/static/: styles.css
src/templates/: account.html  base.html  confirm_email.html  index.html  login.html  mirror_exists.html  mirrors.html  password_reset.html  rsync.html  signup.html
src/templates/email/: confirm_email.html  recover-password.html
src/utils/: config.py  decorators.py  email.py
theme_src/: styles.css
