[tool.poetry]
name = "Mirrors Manager"
version = "0.0.1"
description = "Tool to manage Manjaro mirrors."
authors = ["Vitor Lopes"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.3"
flask-sqlalchemy = "^3.0.3"
flask-mail = "^0.9.1"
flask-migrate = "^4.0.4"
pycountry = "^22.3.5"
requests = "^2.29.0"
apscheduler = "^3.10.1"
flask-login = "^0.6.2"
flask-wtf = "^1.1.1"
gevent = "^22.10.2"
gunicorn = "^20.1.0"
python-dateutil = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
